--- a/src/AppBundle/Resources/views/Balance/index.html.twig
+++ b/src/AppBundle/Resources/views/Balance/index.html.twig
@@ -3,69 +3,73 @@
 {% block index %}
     {% block left %}{% endblock %}
     {% block right %}{% endblock %}
-    <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addFunds">Add funds</button></a>
-    <div class="modal fade" id="addFunds">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">Add funds to your account</h3>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form action="{{ path('deposit-balance') }}" method="post" class="form-horizontal">
-                                <div class="form-group">
-                                    <div class="col-sm-6">
-                                        <label class="control-label">Balance</label>
+    <div class="well">
+        <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addFunds">Add funds</button></a>
+        <div class="modal fade" id="addFunds">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Add funds to your account</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <form action="{{ path('deposit-balance') }}" method="post" class="form-horizontal">
+                                    <div class="form-group">
+                                        <div class="col-sm-6">
+                                            <label class="control-label">Balance</label>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input name="deposit-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                        </div>
                                     </div>
-                                    <div class="col-sm-6">
-                                        <input name="deposit-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button type="submit" class="btn-success pull-right btn">Submit</button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <button type="submit" class="btn-success pull-right btn">Submit</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-12">
-                            <p>Your current balance is: {{ user.balance }}</p>
+                                </form>
+                            </div>
+                            <div class="col-md-12">
+                                <p>Your current balance is: {{ user.balance }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#withdrawFunds">Withdraw funds</button></a>
-    <div class="modal fade" id="withdrawFunds">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">Withdraw funds to your account</h3>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <form action="{{ path('withdraw-balance') }}" method="post" class="form-horizontal">
-                                <div class="form-group">
-                                    <div class="col-sm-6">
-                                        <label class="control-label">Balance</label>
+        <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#withdrawFunds">Withdraw funds</button></a>
+        <div class="modal fade" id="withdrawFunds">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Withdraw funds from your account</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <form action="{{ path('withdraw-balance') }}" method="post" class="form-horizontal">
+                                    <div class="form-group">
+                                        <div class="col-sm-6">
+                                            <label class="control-label">Balance</label>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input name="withdraw-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                        </div>
                                     </div>
-                                    <div class="col-sm-6">
-                                        <input name="withdraw-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button type="submit" class="btn-success pull-right btn">Submit</button>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <button type="submit" class="btn-success pull-right btn">Submit</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-12">
-                            <p>Your current balance is: {{ user.balance }}</p>
+                                </form>
+                            </div>
+                            <div class="col-md-12">
+                                <p>Your current balance is: {{ user.balance }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
