--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -20,4 +20,11 @@
             </a>
         </div>
     </div>
+    <div id="sidebar1" class="row">
+        <div class="col-lg-12 col-md-12">
+            <a href="{{ path('hearthstone') }}">
+                <img class="ebet-nav" src="{{ asset('bundles/app/img/hearthstone.PNG')}}">
+            </a>
+        </div>
+    </div>
 </div>
