--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -22,8 +22,8 @@
     </div>
     <div id="sidebar1" class="row">
         <div class="col-lg-12 col-md-12">
-            <a href="{{ path('hearthstone') }}">
-                <img class="ebet-nav" src="{{ asset('bundles/app/img/hearthstone.PNG')}}">
+            <a href="{{ path('starcraft') }}">
+                <img class="ebet-nav" src="{{ asset('bundles/app/img/sc2logo.png')}}">
             </a>
         </div>
     </div>
