--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -6,7 +6,7 @@
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-dismissible alert-success">
             <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong>Error:</strong> {{ flashMessage }}
+            <strong>Notice:</strong> {{ flashMessage }}
         </div>
     {% endfor %}
 
